tests/ui/lang/core/array/array_entry_param.stderr
error: entry point parameter type not yet supported (`[usize; 0]` has size `0`)
 --> $DIR/array_entry_param.rs:9:19
  |
9 | pub fn compute(m: [usize; 0]) {}
  |                   ^^^^^^^^^^

error: aborting due to 1 previous error

